--- a/SignLog.html
+++ b/SignLog.html
@@ -5,6 +5,7 @@
    }
   </style>
 	<body>
+    <div class="register">
 	<center><span>Register</span></center>
     <br>
     <br>
@@ -17,8 +18,8 @@
 
        <span id="texter">Password:</span>
        <center><input id="pass" type="password" placeholder="pass123"></center>
-       
-       
+
+
 
        <button type="submit"class="btn striped-shadow blue"  id="continue" value="continue" ><span>Continue</span></button>
      </form>
@@ -26,6 +27,10 @@
    </div>
 
  </div></center>
+</div>
+<div class="logout">
+  You are currently signed in. To register, please <a id="logout">logout</a>.
+</div>
 
 </div>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
